@@ -356,21 +356,23 @@ class SQLite(Database, SQLiteSync, SQLiteMedia, SQLiteLogging,
                 _("Unable to load file: database version mismatch.")
         # Identify missing plugins for card types and their parents.
         plugin_needed = set()
-        active_ids = set(card_type.id for card_type in self.card_types())
+        builtin_ids = set(card_type.id for card_type in self.card_types())
         # Sometimes corruption keeps the global_variables table intact,
         # but not the cards table...
         try:
-            result = self.con.execute("""select distinct card_type_id
-                from cards""")
+            used_ids = \
+                self.con.execute("select distinct card_type_id from cards")
         except:
-            raise RuntimeError, _("Unable to load file.") + traceback_string()        
-        for cursor in result:
+            raise RuntimeError, _("Unable to load file.") + traceback_string()
+        defined_in_database_ids = \
+            [cursor[0] for cursor in self.con.execute("select id from card_types")]
+        for cursor in used_ids:
             id = cursor[0]
             while "::" in id: # Move up one level of the hierarchy.
                 id, child_name = id.rsplit("::", 1)
-                if id not in active_ids:
+                if id not in builtin_ids and id not in defined_in_database_ids:
                     plugin_needed.add(id)
-            if id not in active_ids:
+            if id not in builtin_ids and id not in defined_in_database_ids:
                 plugin_needed.add(id)
         for card_type_id in plugin_needed:
             try:
@@ -379,11 +381,12 @@ class SQLite(Database, SQLiteSync, SQLiteMedia, SQLiteLogging,
                 self._connection.close()
                 self._connection = None
                 raise exception
-        # Instantiate card types stored in this database.
-        for cursor in self.con.execute("select id from card_types"):
-            id = cursor[0]
+        # Instantiate card types stored in this database. Since they could
+        # depend on a plugin, the card types need to be instatiated last.
+        for id in defined_in_database_ids:
             card_type = self.card_type(id, is_id_internal=False)
             self.component_manager.register(card_type)
+        # Finalise.
         self._current_criterion = self.criterion(1, is_id_internal=True)
         self.config()["path"] = contract_path(path, self.config().data_dir)
         for f in self.component_manager.all("hook", "after_load"):
